--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 			<version>1.2.6</version>
 		</dependency>
 		<dependency>
+		    <groupId>com.mashape.unirest</groupId>
+		    <artifactId>unirest-java</artifactId>
+		    <version>1.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.39</version>
